--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
       </div>
       <hr />
       <img src="/images/playnine-score-keeper-icon.png" alt="The PlayNine Scorekeeping app icon." class="img-fluid col-md-3" />
-      <p class="lead">PlayNine Scorekeeping App</p>
+      <p class="lead">Play Nine Score Keeper</p>
+      <p>Elevate your Play Nine card game experience with Play Nine Score Keeper, the ultimate companion app for seamless score tracking and game management! <br /> - Multiple Ongoing Games: Manage several games at once with ease, perfect for game nights or tournaments. <br /> - Game History: Review past rounds to relive great shots or settle friendly disputes. <br /> - Player Statistics: Track individual player performance with detailed stats to see who’s the true Play Nine champion. <br /> - Unlimited Players: Bring everyone to the course—add as many players as you’d like! <br /> - iCloud Sync: Keep your games and scores synced across devices, so you’re always ready to play. <br /> Whether you're a casual golfer or a Play Nine enthusiast, Play Nine Score Keeper makes tracking scores simple, fun, and reliable. Download now and ace your game nights with precision!</p>
+      <div class="row row-cols-1 row-cols-md-1">
+        <div class="col g-3">
+          <a href="https://apps.apple.com/us/app/play-nine-score-keeper/id1632761987?itscg=30200&amp;itsct=apps_box_badge&amp;mttnsubad=1632761987" style="display: inline-block;"> <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1657065600" alt="Download on the App Store" style="width: 246px; height: 82px; vertical-align: middle; object-fit: contain;" /> </a> 
+        </div>
+      </div>
       <hr />
     </div>
     <script src="/js/bootstrap.bundle.min.js"></script>
